--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,3 +1,15 @@
-{{#if name}}
-<h1>Залогинься, потом играй!</h1>
-{{/if}}
+{{!-- <h1>Залогинься, потом играй!</h1> --}}
+
+
+<div class="sec-wr">
+  <div class="bg-img"></div>
+  <div class="sec-text">
+    <div class="sec-f">QuizGame</div>
+    <div class="sec-s">By>Kolyan><br>>Danya><br>>Ilya></div>
+  </div>
+  <div class="sec-text-d">
+    <div class="sec-f">QuizGame By</div>
+    <div class="sec-s">By</div>
+
+  </div>
+</div>
