--- a/views/header.hbs
+++ b/views/header.hbs
@@ -29,8 +29,8 @@
           {{/if}}
 
         </form>
-        {{!--
-        <script src="../routes/main.route.js"> </script> --}}
+
+        <script src="../routes/main.route.js"> </script>
       </ul>
     </div>
   </div>
