--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,8 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/card.css">
+  <script defer src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+
+  <script defer src="/js/jquery.rotating-slider.js"></script>
+  {{!--
+  <script defer src="/js/jquery.rotating-slider.min.js"></script> --}}
+
+  </script>
   <script defer src="/js/bootstrap.min.js"></script>
   <title>Document</title>
 </head>
@@ -14,6 +25,7 @@
 <body>
   {{>header}}
   {{{body}}}
+  {{logo}}
   {{>footer}}
 </body>
 
