--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <script defer src="/js/bootstrap.min.js"></script>
+  <script defer src="/js/application.js"></script>
+  <script src="/js/jquery.js"></script>
   <title>Document</title>
 </head>
 
@@ -16,5 +18,4 @@
   {{{body}}}
   {{>footer}}
 </body>
-
 </html>
