--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,3 +1,6 @@
-{{#if name}}
-<h1>Залогинься, потом играй!</h1>
-{{/if}}
+<div class="container">
+  <button type="button" class="btn btn-success md" id="showBtn">Success</button>
+  <ul id="list">
+  </ul>
+  <button type="button" class="btn btn-success md" id="startOne">Вопросы темы один</button>
+</div>
