--- a/views/header.hbs
+++ b/views/header.hbs
@@ -11,10 +11,7 @@
           {{#if name}}
           <a href="/add" class="btn btn-outline-dark">Играть</a>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/profile">Корзина</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/redUser">Профиль</a>
+            <a class="nav-link active" aria-current="page" href="/profile">Статистика</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">Выйти</a>
