--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,17 +8,14 @@
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
 
-
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/card.css">
+  <script defer src="/js/application.js"></script>
   <script defer src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 
   <script defer src="/js/jquery.rotating-slider.js"></script>
-  {{!--
-  <script defer src="/js/jquery.rotating-slider.min.js"></script> --}}
-
-  </script>
   <script defer src="/js/bootstrap.min.js"></script>
+  
   <title>Document</title>
 </head>
 
