--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,6 +1,4 @@
 {{!-- <h1>Залогинься, потом играй!</h1> --}}
-
-
 <div class="sec-wr">
   <div class="bg-img"></div>
   <div class="sec-text">
@@ -10,6 +8,7 @@
   <div class="sec-text-d">
     <div class="sec-f">QuizGame By</div>
     <div class="sec-s">By</div>
-
   </div>
 </div>
+<button type="button" class="btn btn-success" id="startGame">Start game!</button>
+
